# Constellation

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/src/: main.rs
display/: Cargo.toml  build.rs
display/src/: main.rs  render.rs  scene.rs  state.rs
display/src/shaders/: quad.wgsl
docs/: mvp-backlog.md
editor/: README.md
editor/tauri/: Cargo.toml  build.rs  tauri.conf.json
editor/tauri/src/: main.rs
editor/ui/: index.html  package-lock.json  package.json  vite.config.js
editor/ui/src/: App.jsx  main.jsx  store.js
editor/ui/src/components/: ConsolePanel.jsx  DisplayWindow.jsx  GlobalTicker.jsx  Inspector.jsx  LoadingOverlay.jsx  MediaBin.jsx  MediaThumb.jsx  MenuBar.jsx  Spinner.jsx  Timeline.jsx  TopConsoleDrawer.jsx  Viewport.jsx  Viewport2D.jsx
editor/ui/src/display/: displayManager.js
editor/ui/src/utils/: cacheMedia.js  parseProject.js  tauriCompat.js
proto/constellation/v1/: control.proto  scene.proto
scripts/: run-editor.sh
