[package]
name = "constellation-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"

