[package]
name = "constellation-editor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
protoc-bin-vendored = "3"
tonic-build = "0.11"

[dependencies]
tauri = { version = "1", features = [ "dialog-all"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[package.metadata.tauri]
config = { }
